--- a/client/public/stylesheet.css
+++ b/client/public/stylesheet.css
@@ -28,7 +28,7 @@ body {
 
 /* MAIN SECTION */
 
-main {
+.homepage {
 	height: 50vh;
 	width: 100%;
 	background-image: url("https://www.umass.edu/cp/sites/default/files/2017_07_13_03_Recreation%20Center_Southeast%20Exterior%20Perspective_Night.jpg");
@@ -58,4 +58,66 @@ main {
 	height: 200px;
 	width: 200px;
 	object-fit: cover;
+}
+
+/* MATCHING PAGE */
+
+.title {
+	font-size: 3rem;
+	text-align: center;
+}
+
+/* MAIN SECTION */
+
+.slider {
+	text-align: center;
+	background-color: lightgrey;
+}
+
+.name {
+	margin-top: 0.5em;
+}
+
+.caro-img {
+	width: 500px;
+	height: 500px;
+	object-fit: cover;
+}
+
+.carousel-item {
+	height: 750px;
+}
+
+.selection {
+	padding: 1em;
+}
+
+.yes {
+	font-size: 4.2em;
+	color: green;
+	padding: 0.25em;
+	transform: scale(1);
+	transition: transform 250ms;
+}
+
+.no {
+	font-size: 3.4em;
+	color: red;
+	padding: 0.25em;
+	padding-bottom: 0.5em;
+	transform: scale(1);
+	transition: transform 250ms;
+}
+
+.yes:hover,
+.yes:focus,
+.no:hover,
+.no:focus {
+	transform: scale(1.2);
+	opacity: 0.9;
+}
+
+.select-btn {
+	background: none;
+	border: none;
 }
