--- a/client/public/stylesheet.css
+++ b/client/public/stylesheet.css
@@ -123,6 +123,7 @@ body {
 }
 
 /* Login */
+
 body#login{
 	background-image: url("https://nypost.com/wp-content/uploads/sites/2/2018/01/012018_gym_buddies.jpg?quality=75&strip=all");
 	background-repeat: no-repeat;
@@ -135,4 +136,5 @@ body#login{
 	height: 350px;
 	background-color: rgba(181, 186, 186, 0.925);
 	border: 5px solid green;
+	text-align: center;
 }
