--- a/client/public/stylesheet.css
+++ b/client/public/stylesheet.css
@@ -140,7 +140,6 @@ body#login {
 	margin: auto;
 }
 
-
 /* MATCH HISTORY*/
 .workouts-carousel-item {
 	height: 300px;
@@ -181,7 +180,7 @@ body#login {
 	font-weight: 500;
 }
 
-.prev-matches-date {
+.prev-matches-info {
 	font-size: 150%;
 	font-weight: 400;
 }
