--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -30,7 +30,7 @@ body {
 .homepage {
 	height: 50vh;
 	width: 100%;
-	background-image: url("https://www.umass.edu/cp/sites/default/files/2017_07_13_03_Recreation%20Center_Southeast%20Exterior%20Perspective_Night.jpg");
+	background-image: url("https://www.umass.edu/campusrec/sites/default/files/styles/slideshow_image/public/images/slideshow/rec-center-image.jpg?itok=cKIO2kIF");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
@@ -139,12 +139,12 @@ body#background {
 	margin: auto;
 }
 
-#signupToggle{
-	background:none;
-    border:none;
-    margin:0;
-    padding:0;
-    cursor: pointer;
+#signupToggle {
+	background: none;
+	border: none;
+	margin: 0;
+	padding: 0;
+	cursor: pointer;
 }
 
 #error-text {
