--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -135,36 +135,51 @@ body {
 
 .show-info {
 	font-size: 1.5rem;
-	color: white;
+	align-items: center;
+	appearance: none;
+	background-color: #fcfcfd;
+	border-radius: 4px;
+	border-width: 0;
+	box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+		rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+	box-sizing: border-box;
+	color: #36395a;
+	cursor: pointer;
+	display: inline-flex;
+	font-family: "JetBrains Mono", monospace;
+	height: 48px;
+	justify-content: center;
+	line-height: 1;
+	list-style: none;
+	overflow: hidden;
+	padding-left: 16px;
+	padding-right: 16px;
+	position: relative;
+	text-align: left;
+	text-decoration: none;
+	transition: box-shadow 0.15s, transform 0.15s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	white-space: nowrap;
+	will-change: box-shadow, transform;
+	font-size: 18px;
 }
+
+.show-info:focus {
+	box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+		rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+}
+
 .show-info:hover {
-	animation: effect 0.4s;
+	box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+		rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+	transform: translateY(-2px);
 }
 
-@keyframes effect {
-	0% {
-		transform: translateX(0px) rotate(0deg);
-	}
-
-	20% {
-		transform: translateX(-4px) rotate(-4deg);
-	}
-
-	40% {
-		transform: translateX(-2px) rotate(-2deg);
-	}
-
-	60% {
-		transform: translateX(4px) rotate(4deg);
-	}
-
-	80% {
-		transform: translateX(2px) rotate(2deg);
-	}
-
-	100% {
-		transform: translateX(0px) rotate(0deg);
-	}
+.show-info:active {
+	box-shadow: #d6d6e7 0 3px 7px inset;
+	transform: translateY(2px);
 }
 
 .selection {
