--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -707,9 +707,11 @@ body#background {
 }
 
 #rectangleBox {
+	padding: 1em;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	border-radius: 10px;
+	background-color: white;
 	width: 300px;
-	background-color: rgba(181, 186, 186, 0.925);
-	border: 5px solid green;
 	text-align: center;
 	margin: auto;
 }
