--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -227,6 +227,18 @@ body {
 
 /* Login */
 
+#signup {
+	margin-top: 2em;
+}
+
+.modal-content {
+	height: 600px;
+}
+
+.modal-body {
+	margin: 1em 0;
+}
+
 #close {
 	overflow: hidden;
 	position: relative;
@@ -726,7 +738,7 @@ body#background {
 #signupToggle {
 	background: none;
 	border: none;
-	margin: 0;
+	margin-top: 2.5em;
 	padding: 0;
 	cursor: pointer;
 }
