Minor UI changes

--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -332,6 +332,10 @@ body {
 }
 
 /* MATCH HISTORY*/
+#noWorkoutText1, #noWorkoutText2{
+	text-align: center;
+}
+
 .workouts-carousel-item {
 	height: 300px;
 }
