--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -876,3 +876,7 @@ effect 3
 	box-shadow: rgba(60, 64, 67, 0.3) 0 1px 3px 0,
 		rgba(60, 64, 67, 0.15) 0 4px 8px 3px;
 }
+
+#noMoreMatches {
+	margin: auto;
+}
