Backend is 95% done

--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -332,7 +332,8 @@ body {
 }
 
 /* MATCH HISTORY*/
-#noWorkoutText1, #noWorkoutText2{
+#noWorkoutText1, 
+#noWorkoutText2 {
 	text-align: center;
 }
 
