--- a/server/public/css/stylesheet.css
+++ b/server/public/css/stylesheet.css
@@ -320,9 +320,74 @@ body {
 }
 
 /* MATCH HISTORY*/
+
+#matchHistory-background{
+	background-color: #dbd4d3;
+}
+
+#plus1,
+#plus2,
+#plus3 {
+	padding: 0;
+	border: none;
+	background: none;
+}
+
 #noWorkoutText1, 
 #noWorkoutText2 {
 	text-align: center;
+}
+
+.accordion-button{
+	background-color: #d6e4e5;
+	border-color: black;
+}
+
+.accordion-button:not(.collapsed) {
+	background-color: #c6d9db;
+	color: black;
+}
+
+.accordion-body{
+	background-color: #D3DADB ;
+}
+
+.matchHistory-btn {
+	background-color: #fbeee0;
+	border: 2px solid #422800;
+	border-radius: 30px;
+	box-shadow: #422800 4px 4px 0 0;
+	color: #422800;
+	cursor: pointer;
+	display: inline-block;
+	font-weight: 600;
+	font-size: 18px;
+	padding: 0 18px;
+	line-height: 1.5;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+}
+
+.matchHistory-btn:hover {
+	background-color: #fff;
+}
+
+.matchHistory-btn:active {
+	box-shadow: #422800 2px 2px 0 0;
+	transform: translate(2px, 2px);
+}
+
+.modal-revert {
+	background-color: #d6e4e5;
+	height: revert;
+}
+
+.form-group-revert {
+	display: revert;
+	height: revert;
 }
 
 .workouts-carousel-item {
@@ -338,6 +403,10 @@ body {
 .carousel-indicators {
 	filter: invert(100%);
 	margin-bottom: 4em;
+}
+
+.add-workout-card{
+	background-color: #D3DADB;
 }
 
 .add-workout-icon {
@@ -499,50 +568,6 @@ body#background {
 	text-align: left;
 }
 
-/* MATCH HISTORY*/
-.workouts-carousel-item {
-	height: 300px;
-}
-
-.border-2 {
-	height: 300px;
-}
-
-.carousel-control-next,
-.carousel-control-prev,
-.carousel-indicators {
-	filter: invert(100%);
-	margin-bottom: 4em;
-}
-
-.add-workout-icon {
-	object-fit: cover;
-	width: 140px;
-	height: 140px;
-}
-
-.prev-match-img {
-	height: 250px;
-	width: 250px;
-	object-fit: cover;
-	margin-right: 4em;
-}
-
-.prev-matches-header {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.prev-matches-name {
-	font-size: 210%;
-	font-weight: 500;
-}
-
-.prev-matches-info {
-	font-size: 150%;
-	font-weight: 400;
-}
 
 .hidden-file-picker {
 	display: none;
@@ -882,4 +907,8 @@ effect 3
 
 #noMoreMatches {
 	margin: auto;
+}
+
+#removeMatch1:hover {
+
 }
